Closed Bug 715852 Opened 13 years ago Closed 13 years ago

JS Test Failure on ecma_5/Object/proto-property-change-writability-set.js ( Assertion failure: shape->writable() )

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
critical

Tracking

()

RESOLVED FIXED
mozilla12

People

(Reporter: decoder, Assigned: Waldo)

Details

(Keywords: assertion, regression, testcase, Whiteboard: js-triage-done)

The JS test mentioned in the subject has been failing for a while now, with:

Assertion failure: shape->writable(), at js/src/methodjit/StubCalls.cpp:170

Tested with m-c revision 8ae16e346bd0.
Er, I fail at life.  Did I really fix the interpreter code but not the stubcall code?  Looks like it.  Such a rookie error.

https://hg.mozilla.org/integration/mozilla-inbound/rev/985b197bb232
Status: NEW → ASSIGNED
OS: Linux → All
Hardware: x86_64 → All
Whiteboard: js-triage-needed → js-triage-done
Target Milestone: --- → mozilla12
https://hg.mozilla.org/mozilla-central/rev/985b197bb232
Assignee: general → jwalden+bmo
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.