Bug 715852 - Fix an assertion running ecma_5/Object/proto-property-change-writability-set.js that happens when a test gets methodjitted just so.  This fix is the required methodjit complement to the interpreter fix from bug 713944.  FAIL.  r=i-am-dumb